TranscodingJob: don't pass -n to ffmpeg, check file existence manually

BUGFIXES:
 * Transcoding: fix compatibility with libav's ffmpeg

BUG: 300551
FIXED-IN: 2.6
DIGEST: Bugfix